--- a/demo.css
+++ b/demo.css
@@ -1,1 +1,8 @@
 
+#board_title{
+    color: #092743;
+    font-family: "MuseoSans-300", Sans-serif;
+    font-size: 23px;
+    font-weight: 500;
+    letter-spacing: 0.14em;
+}
